--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -77,7 +77,7 @@ else
 
                 </div>
             </div>
-            <div class="card-body"  id="printArea">
+            <div class="card-body" >
                 <dl class="row">
                     <dt class="col-sm-3">Fiscal Year</dt>
                     <dd class="col-sm-9">@report.FiscalYear</dd>
@@ -144,4 +144,269 @@ else
     }
 </div>
 
+@* <table class="table-format border"" align="center"  id="printArea">
+    <tr>
+        <td colspan="10">
+            <div align="center" style=" margin-top: 20px; margin-bottom: 40px; font-weight: bold;">
+                Receiving Items
+            </div>
+            <table class="nested-table" border="0" width="100%">
+                <tr >
+                    <td style="width: 15%;">Serial No.</td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;" align="center">Supplier Name</td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;" align="right">Recipient Sector</td>
+                    <td style="width: 10%;"></td>
+                    <td style="width: 10%;"></td>
+                </tr>
+                <tr>
+                    <td style="width: 15%;">Page Count</td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;" align="right">Sector Number</td>
+                    <td style="width: 10%;"></td>
+                    <td style="width: 10%;"></td>
+                </tr>
+                <tr>
+                    <td style="width: 15%;">Date Of Receipt</td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;" align="right">Recipient Warehouse</td>
+                    <td style="width: 10%;"></td>
+                    <td style="width: 10%;"></td>
+                </tr>
+                <tr>
+                    <td style="width: 15%;">Fiscal Year</td>
+                    <td style="width: 15%;" align="center">Document Date</td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;" align="center">Document No.</td>
+                    <td style="width: 15%;"></td>
+                    <td style="width: 15%;" align="right">Based On Document</td>
+                    <td style="width: 10%;"></td>
+                    <td style="width: 10%;"></td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <th style="width: 25%;" rowspan="2">Comments</th>
+        <th style="width: 7%;" colspan="2">Unit Price</th>
+        <th style="width: 7%;" colspan="2">Total Price</th>
+        <th style="width: 3%;" rowspan="2">Quantity</th>
+        <th style="width: 3%;" rowspan="2">Unit Of Measure</th>
+        <th style="width: 10%;" rowspan="2">Item Description</th>
+        <th style="width: 5%;" rowspan="2">Item No</th>
+        <th style="width: 5%;" rowspan="2">Count</th>
+    </tr>
+    <tr>
+        <td style="width: 3.5%; text-align: center;">Price</td>
+        <td style="width: 3.5%; text-align: center;">Rupees</td>
+        <td style="width: 3.5%; text-align: center;">Price</td>
+        <td style="width: 3.5%; text-align: center;">Rupees</td>
+    </tr>
+    <tr>
+        <td>&nbsp;454545</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td colspan="7">&nbsp;</td>
+    </tr>
+    <tr>
+        <td colspan="2" style=" text-align: center;"><b>Chief Responsible</b></td>
+        <td colspan="4" style="text-align: center;"><b>Technical Member</b></td>
+        <td colspan="3" style="text-align: center;"><b>Recipient</b></td>
+        <td>&nbsp;</td>
+    </tr>
+    <tr>
+        <td rowspan="2" colspan="2" style="text-align: center;">Approve</td>
+        <td colspan="4">&nbsp;</td>
+        <td colspan="3">&nbsp;</td>
+        <td style=" text-align: center;">Name<br>Signature<br>Date</td>
+    </tr>
+</table> *@
 
+@* <div id="printArea">
+     <h2 style="text-align: center;">Receiving Report</h2>
+
+  <!-- Header Section -->
+  <table style="width: 100%; border: 1px solid #000; border-collapse: collapse; margin-bottom: 10px;">
+    <tr>
+      <td style="border: 1px solid #000; padding: 6px;">Serial Number</td>
+      <td style="border: 1px solid #000; padding: 6px;">Pages Count</td>
+      <td style="border: 1px solid #000; padding: 6px;">Date of Receipt</td>
+      <td style="border: 1px solid #000; padding: 6px;">Fiscal Year</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #000; padding: 6px;">Supplier Name</td>
+      <td style="border: 1px solid #000; padding: 6px;">Receiving Warehouse</td>
+      <td style="border: 1px solid #000; padding: 6px;">Recipient Sector</td>
+      <td style="border: 1px solid #000; padding: 6px;">Sector Number</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #000; padding: 6px;">Document Date</td>
+      <td style="border: 1px solid #000; padding: 6px;">Document No.</td>
+      <td style="border: 1px solid #000; padding: 6px;">Based on Document</td>
+      <td style="border: 1px solid #000; padding: 6px;"></td>
+    </tr>
+  </table>
+
+  <!-- Items Table -->
+  <table style="width: 100%; border-collapse: collapse;">
+    <thead>
+      <tr>
+        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Count</th>
+        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Item No.</th>
+        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Item Name / Description*</th>
+        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Unit of Measure</th>
+        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Quantity</th>
+        <th colspan="2" style="border: 1px solid #000; padding: 6px;">Unit Price</th>
+        <th colspan="2" style="border: 1px solid #000; padding: 6px;">Total Price</th>
+        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Comments</th>
+      </tr>
+      <tr>
+        <th style="border: 1px solid #000; padding: 6px;">هـ</th>
+        <th style="border: 1px solid #000; padding: 6px;">ر.س</th>
+        <th style="border: 1px solid #000; padding: 6px;">هـ</th>
+        <th style="border: 1px solid #000; padding: 6px;">ر.س</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="border: 1px solid #000; padding: 6px;">1</td>
+        <td style="border: 1px solid #000; padding: 6px;">123456</td>
+        <td style="border: 1px solid #000; padding: 6px;">ميزان حرارة</td>
+        <td style="border: 1px solid #000; padding: 6px;">علبة</td>
+        <td style="border: 1px solid #000; padding: 6px;">20</td>
+        <td style="border: 1px solid #000; padding: 6px;">5</td>
+        <td style="border: 1px solid #000; padding: 6px;">10</td>
+        <td style="border: 1px solid #000; padding: 6px;">100</td>
+        <td style="border: 1px solid #000; padding: 6px;">200</td>
+        <td style="border: 1px solid #000; padding: 6px;">جيد</td>
+      </tr>
+      <!-- Additional rows can be added here -->
+    </tbody>
+  </table>
+
+  <!-- Total Price Row -->
+  <div style="margin-top: 10px; font-weight: bold;">
+    القيمة الإجمالية - Total Price:
+  </div>
+
+  <!-- Footer Section -->
+  <table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+    <tr>
+      <td style="border: 1px solid #000; text-align: center; padding: 10px;">
+        رئيس المسؤول<br>Chief Responsible<br><br>......................
+      </td>
+      <td style="border: 1px solid #000; text-align: center; padding: 10px;">
+        العضو الفني<br>Technical Member*<br><br>......................
+      </td>
+      <td style="border: 1px solid #000; text-align: center; padding: 10px;">
+        المستلم<br>Recipient<br><br>......................
+      </td>
+    </tr>
+  </table>
+
+  <!-- Approval Note -->
+  <div style="text-align: center; margin-top: 15px; font-weight: bold; color: green;">
+    معتمد - Approved
+  </div>
+
+  <!-- Signature and Date -->
+  <div style="margin-top: 10px;">
+    الاسم: _____________ <br>
+    التوقيع: _____________ <br>
+    التاريخ: _____________ <br>
+    Name, Signature, Date (of approval)
+  </div>
+
+</div> *@
