--- a/Pages/ViewItemCards.cshtml
+++ b/Pages/ViewItemCards.cshtml
@@ -43,96 +43,98 @@
         </div>
     }
 </div> *@
-<button id="printBtn" class="btn btn-primary">Print Table</button>
-
-<div id="exportTableContainer" >
+<button id="printBtn" class="btn btn-primary">Print</button>
 
 
 
+<div id="exportTableContainer" class="mt-4">
   <!-- Header Layout Table -->
-    <table class="table w-100 mb-4">
-        <tr>
-            <td colspan="2">
-            <h4 class="text-center mb-0">Item Card</h4>
-            </td>
-        </tr>
-
-        <tr>
-            <!-- Left Column -->
-            <td class="w-50 align-top">
-                <div class="p-2">
-                    <div class="mb-1">Ceiling: 200</div>
-                    <div class="mb-1">Reorder Limit: 50</div>
-                    <div>Minimum: 20</div>
-                </div>
-            </td>
-
-            <!-- Right Column -->
-            <td class="w-50 align-top">
-            <div class="p-2">
-                <div class="mb-1 text-end">Recipient Sector: Health Dept</div>
-                <div class="mb-1 text-end">Room Name & Number: Room A12</div>
-                <div class="mb-1 text-end">Receiving Warehouse: Central Store</div>
-            </div>
-            </td>
-        </tr>
-    </table>
-
-  <!-- Item Information Row -->
-  <table class="table w-100 mb-4">
+  <table class="table w-100 mb-4 border">
     <tr>
-      <td class="subheading w-25">Item No. (Item Code)</td>
-      <td class="w-25">ITM-00123</td>
-      <td class="subheading w-25">Item Name (Arabic)</td>
-      <td class="w-25">جهاز قياس الحرارة</td>
+      <td colspan="2">
+        <h4 class=" mb-0" style="text-align: center;">Item Card</h4>
+      </td>
     </tr>
     <tr>
-      <td class="subheading">Unit of Measure</td>
-      <td>Box</td>
-      <td class="no-border" colspan="2"></td>
+      <!-- Left Column -->
+      <td class="w-50 align-top border-end">
+        <div class="p-2">
+          <div class="mb-1">Ceiling: 200</div>
+          <div class="mb-1">Reorder Limit: 50</div>
+          <div>Minimum: 20</div>
+        </div>
+      </td>
+      <!-- Right Column -->
+      <td class="w-50 align-top">
+        <div class="p-2">
+          <div class="mb-1" style="text-align: end;">Recipient Sector: Health Dept</div>
+          <div class="mb-1" style="text-align: end;">Room Name & Number: Room A12</div>
+          <div class="mb-1" style="text-align: end;">Receiving Warehouse: Central Store</div>
+        </div>
+      </td>
     </tr>
   </table>
 
-  <!-- Main Data Table -->
-  <table class="table table-bordered w-100">
-    <thead class="table-secondary">
+  <!-- Item Information Table -->
+  @* <table class="table w-100 mb-4 table-bordered">
+    <thead>
       <tr>
-        <th>Date of Entry into Warehouse</th>
-        <th>Document Number</th>
-        <th>Quantity Received</th>
-        <th>Source (Supplier)</th>
-        <th>Amount Spent</th>
-        <th>Party to Whom It Is Directed</th>
-        <th>Remaining Balance</th>
-        <th>Dispensing Document No.</th>
+        <th>Unit of Measure</th>
+        <th>Item Name (Arabic)</th>
+        <th>Item No. (Item Code)</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>2025-05-01</td>
-        <td>RR-2025-001</td>
-        <td>100</td>
-        <td>Medical Supply Co.</td>
-        <td>30</td>
-        <td>Ward 3A</td>
-        <td>70</td>
-        <td>DD-2025-023</td>
+        <td>Box</td>
+        <td>جهاز قياس الحرارة</td>
+        <td>ITM-00123</td>
+      </tr>
+    </tbody>
+  </table> *@
+
+
+  <table class="table table-bordered w-100">
+    <thead class="table-secondary">
+      <tr>
+        <th colspan="2"  style="text-align: center;">Unit of Measure <br> Box</th>
+        <th colspan="2"  style="text-align: center;">Item Name (Arabic) <br> جهاز قياس الحرارة</th>
+        <th colspan="4"  style="text-align: center;">Item No. (Item Code) <br> ITM-00123</th>
       </tr>
       <tr>
-        <td>2025-05-03</td>
-        <td>RR-2025-002</td>
-        <td>50</td>
-        <td>PharmaTech</td>
-        <td>10</td>
-        <td>ER Dept</td>
-        <td>110</td>
+        <th>Dispensing Document No.</th>
+        <th>Remaining Balance</th>
+        <th>Party to Whom It Is Directed</th>
+        <th>Amount Spent</th>
+        <th>Source (Supplier)</th>
+        <th>Quantity Received</th>
+        <th>Document Number</th>
+        <th>Date of Entry into Warehouse</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>DD-2025-023</td>
+        <td>70</td>
+        <td>Ward 3A</td>
+        <td>30</td>
+        <td>Medical Supply Co.</td>
+        <td>100</td>
+        <td>RR-2025-001</td>
+        <td>2025-05-01</td>
+      </tr>
+      <tr>
         <td>DD-2025-024</td>
+        <td>110</td>
+        <td>ER Dept</td>
+        <td>10</td>
+        <td>PharmaTech</td>
+        <td>50</td>
+        <td>RR-2025-002</td>
+        <td>2025-05-03</td>
       </tr>
     </tbody>
   </table>
-
-
-
-
 </div>
+
 
