--- a/Pages/ViewItemCards.cshtml
+++ b/Pages/ViewItemCards.cshtml
@@ -47,7 +47,7 @@
 
 
 
-<div id="exportTableContainer" class="mt-4">
+<div id="exportTableContainer" class="mt-4" style="background-color: #ffffff;">
   <!-- Header Layout Table -->
   <table class="table w-100 mb-4 border">
     <tr>
