--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "View Receiving Reports";
 }
 
-
+<style>
+    .nested-table td th {
+        border:none;
+    }
+</style>
 
 <h2>@ViewData["Title"]</h2>
 
@@ -66,7 +70,7 @@ else
     @if (Model.Report != null)
     {
         var report = Model.Report;
-        <div class="card mb-4 border-primary shadow-sm">
+        <div class="card mb-4 border shadow-sm">
             <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                 <strong>Receiving Report - Serial No: @report.SerialNumber</strong>
                 <div>
@@ -144,177 +148,179 @@ else
     }
 </div>
 
-@* <table class="table-format border"" align="center"  id="printArea">
-    <tr>
-        <td colspan="10">
-            <div align="center" style=" margin-top: 20px; margin-bottom: 40px; font-weight: bold;">
-                Receiving Items
-            </div>
-            <table class="nested-table" border="0" width="100%">
-                <tr >
-                    <td style="width: 15%;">Serial No.</td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;" align="center">Supplier Name</td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;" align="right">Recipient Sector</td>
-                    <td style="width: 10%;"></td>
-                    <td style="width: 10%;"></td>
-                </tr>
-                <tr>
-                    <td style="width: 15%;">Page Count</td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;" align="right">Sector Number</td>
-                    <td style="width: 10%;"></td>
-                    <td style="width: 10%;"></td>
-                </tr>
-                <tr>
-                    <td style="width: 15%;">Date Of Receipt</td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;" align="right">Recipient Warehouse</td>
-                    <td style="width: 10%;"></td>
-                    <td style="width: 10%;"></td>
-                </tr>
-                <tr>
-                    <td style="width: 15%;">Fiscal Year</td>
-                    <td style="width: 15%;" align="center">Document Date</td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;" align="center">Document No.</td>
-                    <td style="width: 15%;"></td>
-                    <td style="width: 15%;" align="right">Based On Document</td>
-                    <td style="width: 10%;"></td>
-                    <td style="width: 10%;"></td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-    <tr>
-        <th style="width: 25%;" rowspan="2">Comments</th>
-        <th style="width: 7%;" colspan="2">Unit Price</th>
-        <th style="width: 7%;" colspan="2">Total Price</th>
-        <th style="width: 3%;" rowspan="2">Quantity</th>
-        <th style="width: 3%;" rowspan="2">Unit Of Measure</th>
-        <th style="width: 10%;" rowspan="2">Item Description</th>
-        <th style="width: 5%;" rowspan="2">Item No</th>
-        <th style="width: 5%;" rowspan="2">Count</th>
-    </tr>
-    <tr>
-        <td style="width: 3.5%; text-align: center;">Price</td>
-        <td style="width: 3.5%; text-align: center;">Rupees</td>
-        <td style="width: 3.5%; text-align: center;">Price</td>
-        <td style="width: 3.5%; text-align: center;">Rupees</td>
-    </tr>
-    <tr>
-        <td>&nbsp;454545</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td colspan="7">&nbsp;</td>
-    </tr>
-    <tr>
-        <td colspan="2" style=" text-align: center;"><b>Chief Responsible</b></td>
-        <td colspan="4" style="text-align: center;"><b>Technical Member</b></td>
-        <td colspan="3" style="text-align: center;"><b>Recipient</b></td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td rowspan="2" colspan="2" style="text-align: center;">Approve</td>
-        <td colspan="4">&nbsp;</td>
-        <td colspan="3">&nbsp;</td>
-        <td style=" text-align: center;">Name<br>Signature<br>Date</td>
-    </tr>
-</table> *@
+<div id="printArea" style="display: none;">
+    <table class="table-format border"" align="center"  id="printArea">
+        <tr>
+            <td colspan="10">
+                <div align="center" style=" margin-top: 20px; margin-bottom: 40px; font-weight: bold;">
+                    Receiving Items
+                </div>
+                <table class="nested-table" border="0" width="100%">
+                    <tr >
+                        <td style="width: 15%;">Serial No.</td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;" align="center">Supplier Name</td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;" align="right">Recipient Sector</td>
+                        <td style="width: 10%;"></td>
+                        <td style="width: 10%;"></td>
+                    </tr>
+                    <tr>
+                        <td style="width: 15%;">Page Count</td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;" align="right">Sector Number</td>
+                        <td style="width: 10%;"></td>
+                        <td style="width: 10%;"></td>
+                    </tr>
+                    <tr>
+                        <td style="width: 15%;">Date Of Receipt</td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;" align="right">Recipient Warehouse</td>
+                        <td style="width: 10%;"></td>
+                        <td style="width: 10%;"></td>
+                    </tr>
+                    <tr>
+                        <td style="width: 15%;">Fiscal Year</td>
+                        <td style="width: 15%;" align="center">Document Date</td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;" align="center">Document No.</td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 15%;" align="right">Based On Document</td>
+                        <td style="width: 10%;"></td>
+                        <td style="width: 10%;"></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <th style="width: 25%;" rowspan="2">Comments</th>
+            <th style="width: 7%;" colspan="2">Unit Price</th>
+            <th style="width: 7%;" colspan="2">Total Price</th>
+            <th style="width: 3%;" rowspan="2">Quantity</th>
+            <th style="width: 3%;" rowspan="2">Unit Of Measure</th>
+            <th style="width: 10%;" rowspan="2">Item Description</th>
+            <th style="width: 5%;" rowspan="2">Item No</th>
+            <th style="width: 5%;" rowspan="2">Count</th>
+        </tr>
+        <tr>
+            <td style="width: 3.5%; text-align: center;">Price</td>
+            <td style="width: 3.5%; text-align: center;">Rupees</td>
+            <td style="width: 3.5%; text-align: center;">Price</td>
+            <td style="width: 3.5%; text-align: center;">Rupees</td>
+        </tr>
+        <tr>
+            <td>&nbsp;454545</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td colspan="7">&nbsp;</td>
+        </tr>
+        <tr>
+            <td colspan="2" style=" text-align: center;"><b>Chief Responsible</b></td>
+            <td colspan="4" style="text-align: center;"><b>Technical Member</b></td>
+            <td colspan="3" style="text-align: center;"><b>Recipient</b></td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td rowspan="2" colspan="2" style="text-align: center;">Approve</td>
+            <td colspan="4">&nbsp;</td>
+            <td colspan="3">&nbsp;</td>
+            <td style=" text-align: center;">Name<br>Signature<br>Date</td>
+        </tr>
+    </table>
+</div>
 
-@* <div id="printArea">
+@* <div id="printArea" style="display: none;">
      <h2 style="text-align: center;">Receiving Report</h2>
 
   <!-- Header Section -->
@@ -340,8 +346,8 @@ else
   </table>
 
   <!-- Items Table -->
-  <table style="width: 100%; border-collapse: collapse;">
-    <thead>
+  <table style="width: 100%; border-collapse: collapse;" class="table table-bordered">
+    <thead class="table-secondary">
       <tr>
         <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Count</th>
         <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Item No.</th>
