--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -22,10 +22,8 @@
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
 
-        @{
-            var userGroupName = HttpContext.Session.GetString("UserGroup");
-        }
-        @if (userGroupName == "Warehouse Keeper")
+        
+        @if (@Model.UserGroupName == "Warehouse Keeper")
         {
             <div class="btn-toolbar mb-2 mb-md-0">
                 <a href="ReceivingReports" class="btn btn-sm justify-content-center btn-gray-800 mx-2 d-inline-flex align-items-center">
@@ -42,7 +40,7 @@
     <nav class="nav">
         <a class="nav-link @Model.inboxClass border border-bottom-0" href="?type=inbox">Inbox <sup><span class="badge rounded-pill badge-notification bg-danger">2</span></sup></a>
         
-        @if (userGroupName == "Warehouse Keeper")
+        @if (@Model.UserGroupName == "Warehouse Keeper")
         {
             <a class="nav-link @Model.outboxClass border border-bottom-0" href="?type=outbox">Request Sent</a>
         }
@@ -61,7 +59,8 @@
                     <tbody>
                         @if (Model.pagetype == "inbox")
                         {
-                            <tr>
+                            @* hardcoded message  *@
+                            @* <tr>
                                 <td>
                                     <div class="m-2"><b>Ashwin Bose</b> sent Request for Items. Approve the request or add comments.</div>
                                     <button class="btn btn-info btn-sm p-1">
@@ -74,7 +73,7 @@
                                 <td>12:35 AM</td>
                                 <td><input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /></td>
                             </tr>
-                              <tr>
+                            <tr>
                                 <td>
                                     <div class="m-2">Request for <b>Ashwin Bose</b> is accepted by all.</div>
                                    
@@ -86,31 +85,63 @@
                                 </td>
                                 <td>12:35 AM</td>
                                 <td><input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /></td>
-                            </tr>
-                            @if(userGroupName == "Technical Member"){
-                                @foreach( var inbox in Model.ManagerInboxList){
+                            </tr> *@
+                                @foreach( var inbox in Model.InboxList){
                                     <tr>
                                         <td>
-                                            <div class="m-2"><b>@inbox.CreatedBy</b> sent Request for Items. Approve the request or add comments.</div>
-                                            <button class="btn btn-info btn-sm p-1">
-                                                Accept
-                                            </button>
-                                            <button class="btn btn-warning btn-sm p-1" data-toggle="modal" data-target="#commentRejectModal">
-                                                Comment & Reject
-                                            </button>
+                                            @* <div class="m-2"><b>@inbox.CreatedBy</b> sent Request for Items. Approve the request or add comments.</div> *@
+                                            <form method="post">
+                                                <input type="text" value="@inbox.ReceivingReportId" name="ReceivingReportId" hidden/>
+                                                <div  class="m-2"><b>@inbox.Sender- </b>@inbox.Content</div>
+                                                @{
+                                                     var technicalMemberApproval = Model.RequestSent
+                                                        .FirstOrDefault(r => r.Id == inbox.ReceivingReportId)?.TechnicalMemberApproval;
+                                                    var generalSupApproval =  Model.RequestSent
+                                                        .FirstOrDefault(r => r.Id == inbox.ReceivingReportId)?.GeneralSupApproval;
+                                                }
+                                               
+                                                @if (@Model.UserGroupName == "Technical Member" || @Model.UserGroupName == "General Supervisor")
+                                                {
+                                                    
+
+                                                    if ((@Model.UserGroupName == "Technical Member" && technicalMemberApproval == false)||(@Model.UserGroupName == "General Supervisor" && generalSupApproval == false))
+                                                    {
+                                                        <button class="btn btn-info btn-sm p-1" asp-page-handler="Accept">
+                                                            Accept
+                                                        </button>
+                                                        <button class="btn btn-warning btn-sm p-1" data-toggle="modal" data-target="#commentRejectModal">
+                                                            Comment & Reject
+                                                        </button>
+                                                    }
+                                                    else if ((@Model.UserGroupName == "Technical Member" && technicalMemberApproval == true) ||
+                                                    (@Model.UserGroupName == "General Supervisor" && generalSupApproval == true))
+                                                    {
+                                                        <span class="bg-success p-2 rounded text-white">Accepted</span>
+                                                    }
+                                                }
+                                               
+                                             
+                                                else if(@Model.UserGroupName == "Warehouse Keeper" && technicalMemberApproval == true && generalSupApproval == true){
+                                                     <a href="/ItemCards" class="btn btn-info btn-sm p-1">
+                                                        Add Order to Item Card
+                                                    </a>
+                                                }
+                                            </form>
+                                                    
+
                                         </td>
                                         <td>12:35 AM</td>
                                         <td><input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /></td>
                                     </tr>
                                 }
-                            }
+                            
                           
                         }
                         else{
                             @foreach (var req in Model.RequestSent){
                                 var ReceivingWarehouse = Model.Warehouses.FirstOrDefault(s => s.StoreId == int.Parse(req.ReceivingWarehouse))?.   StoreName ?? "";
                                 <tr>
-                                    <td>Request for Warehouse <b>@ReceivingWarehouse</b> has been processed successfully.</td>
+                                    <td>Request for Warehouse <b>@ReceivingWarehouse</b> has been sent successfully.</td>
                                     <td>12:35 AM</td>
                                     <td>
                                         @* <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /><a asp-page="/ViewReceivingReport"  class="btn btn-info btn-sm">View</a> *@
