--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -34,7 +34,7 @@
 
                         <div class="form-group mb-4">
                             <label>@Model.lblReceivingDate</label> <span class="text-danger">*</span>
-                            <input  type="date" class="form-control" name="ReceivingDate"  />
+                            <input  type="date" class="form-control" name="ReceivingDate" value="Report.ReceivingDate" />
                         </div>
 
                         <div class="form-group mb-4">
@@ -141,7 +141,7 @@
                                     </div>
                                     <div class="form-group mb-4 ms-2 flex-fill">
                                         <label>@Model.lblItemName</label> <span class="text-danger">*</span>
-                                        <select class="form-control" id="ItemName" name="ItemsForReport[0].ItemId" >
+                                        <select asp-for="ItemsForReport[0].ItemId" class="form-control" id="ItemName" name="ItemsForReport[0].ItemId" >
                                             <option value="">Select Item</option>
                                             @foreach (var item in Model.Items)
                                             {
@@ -176,14 +176,14 @@
 
                                     <div class="form-group mb-4"  style="width: 48%;">
                                         <label>@Model.lblQuantity</label> <span class="text-danger">*</span>
-                                        <input  type="number" id="ItemQty" name="ItemsForReport[0].Quantity" class="form-control"  />
+                                        <input asp-for="ItemsForReport[0].Quantity"  type="number" id="ItemQty" name="ItemsForReport[0].Quantity" class="form-control"  />
                                     </div>
                                 </div>
                                 
                                 <div class="d-flex justify-content-between">
                                     <div class="form-group mb-4" style="width: 48%;">
                                         <label>@Model.lblUnitPrice</label> <span class="text-danger">*</span>
-                                        <input type="number"  id="UnitPrice" step="0.01" name="ItemsForReport[0].UnitPrice" class="form-control"  />
+                                        <input asp-for="ItemsForReport[0].UnitPrice" type="number"  id="UnitPrice" step="0.01" name="ItemsForReport[0].UnitPrice" class="form-control"  />
                                     </div>
 
                                     <div class="form-group mb-4" style="width: 48%;">
@@ -191,16 +191,19 @@
                                         <input type="number"  id="TotalPrice" step="0.01" name="TotalPrice" class="form-control" />
                                     </div>
                                 </div>
+
+                                
+                                <div class="form-group mb-4">
+                                    <label>@Model.lblComments</label>
+                                    <textarea asp-for="ItemsForReport[0].Comments" class="form-control" name="ItemsForReport[0].Comments"></textarea>
+                                </div>
+
                                 <div id="itemsContainer" class="mt-3"></div>
 
                             <button type="button" id="addButton" class="btn btn-secondary" onclick="addItem()" disabled>Add More</button>
                         </div>
                        @* Add ItemsForReport ended  *@
 
-                        <div class="form-group mb-4">
-                            <label>@Model.lblComments</label>
-                            <textarea asp-for="Report.Comments" class="form-control"></textarea>
-                        </div>
 
 
                         <div class="form-group mb-4">
@@ -209,7 +212,7 @@
                         </div>
                         <div class="form-group mb-4">
                             <label>@Model.lblRecipientName</label> <span class="text-danger">*</span>
-                            <input  id="RecipientEmployeeName" type="text"  class="form-control"  readonly/>
+                            <input  id="RecipientEmployeeName" value="@Model.RecipientEmployeeName" type="text"  class="form-control"  readonly/>
                         </div>
 
 
@@ -349,6 +352,10 @@
                         <label>Total Price</label>
                         <input type="number" step="0.01" name="ItemsForReport[${itemIndex}].TotalPrice" class="form-control" readonly />
                     </div>
+                </div>
+                <div class="form-group mb-4">
+                    <label>@Model.lblComments</label>
+                    <textarea  class="form-control" name="ItemsForReport[${itemIndex}].Comments"></textarea>
                 </div>
             `;
             container.appendChild(div);
