--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -115,23 +115,23 @@ else
                     <dd class="col-sm-9">@report.Supplier?.SupplierName</dd>
                     
                     <dt class="col-sm-3">Receipient</dt>
-                    <dd class="col-sm-9"></dd>
+                    <dd class="col-sm-9">@Model.ReceipientManager</dd>
 
                     <dt class="col-sm-3">Technical Member</dt>
-                    <dd class="col-sm-9"></dd>
+                    <dd class="col-sm-9">@Model.TechnicalMember</dd>
 
                     <dt class="col-sm-3">General Supervisor</dt>
-                    <dd class="col-sm-9"></dd>
+                    <dd class="col-sm-9">@Model.GeneralSupervisor</dd>
 
                     
 
-                    <dt class="col-sm-3">Remarks</dt>
-                    <dd class="col-sm-9">@report.Comments</dd>
+                   
                 </dl>
 
                 <table class="table table-bordered table-striped">
                     <thead>
                         <tr>
+                            <th>Comments</th>
                             <th>Item Name</th>
                             <th>Item Quantity</th>
                             <th>Unit Price</th>
@@ -139,18 +139,20 @@ else
                         </tr>
                     </thead>
                     <tbody id="itemsTableBody">
-                    <tr>
-                            <td>Zinc</td>
-                            <td>20</td>
-                            <td>10</td>
-                            <td>200</td>
-                    </tr>
-                    <tr>
-                            <td>Chlorine</td>
-                            <td>25</td>
-                            <td>100</td>
-                            <td>2500</td>
-                    </tr>
+                        @foreach(var item in Model.ReceivingItems){
+                            var ItemName = Model.Items.FirstOrDefault(i => i.ItemId == item.ItemId)?.   ItemName ?? "";
+
+                            <tr>
+                                <td>@item.Comments</td>
+                                <td>@ItemName</td>
+                                <td>@item.Quantity</td>
+                                <td>@item.UnitPrice</td>
+                                <td>@(item.Quantity * item.UnitPrice)</td>
+
+                            </tr>
+
+                        }
+                   
                     </tbody>
                 </table>
 
@@ -170,46 +172,46 @@ else
                 <div align="center" style=" margin-top: 20px; margin-bottom: 40px; font-weight: bold;">
                     Receiving Items
                 </div>
+                @{
+                    var rep = Model.Report;
+                }
                 <table class="nested-table" border="0" width="100%">
                     <tr >
-                        <td style="width: 15%;">Serial No.</td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;" align="center">Supplier Name</td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;" align="right">Recipient Sector</td>
-                        <td style="width: 10%;"></td>
-                        <td style="width: 10%;"></td>
+                        <td style="width: 15%;border: none;">Serial No.</td>
+                        <td style="width: 15%;border: none;">@rep.SerialNumber</td>
+                        <td style="width: 15%;border: none;"></td>
+                        <td style="width: 15%;border: none;" align="center">Supplier Name</td>
+                        <td style="width: 15%;border: none;">@rep.Supplier?.SupplierName</td>
+                        <td style="width: 15%;border: none;" align="right">Recipient Sector</td>
+                        <td style="width: 15%;border: none;">@rep.RecipientSector</td>
                     </tr>
                     <tr>
-                        <td style="width: 15%;">Page Count</td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;" align="right">Sector Number</td>
-                        <td style="width: 10%;"></td>
-                        <td style="width: 10%;"></td>
+                        <td style="width: 15%;border: none;">Page Count</td>
+                        <td style="width: 15%;border: none;"></td>
+                        <td style="width: 15%;border: none;"></td>
+                        <td style="width: 15%;border: none;"></td>
+                        <td style="width: 15%;border: none;"></td>
+                        <td style="width: 15%;border: none;" align="right">Sector No.</td>
+                        <td style="width: 15%;border: none;">@rep.SectorNumber</td>
                     </tr>
                     <tr>
-                        <td style="width: 15%;">Date Of Receipt</td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;" align="right">Recipient Warehouse</td>
-                        <td style="width: 10%;"></td>
-                        <td style="width: 10%;"></td>
+                        <td style="width: 15%;border: none;">Date Of Receipt</td>
+                        <td style="width: 15%;border: none;">@rep.ReceivingDate.ToString("yyyy-MM-dd")</td>
+                        <td style="width: 15%;border: none;"></td>
+                        <td style="width: 15%;border: none;"></td>
+                        <td style="width: 15%;border: none;"></td>
+                        <td style="width: 15%;border: none;" align="right">Recipient Warehouse</td>
+                        <td style="width: 15%;border: none;">@Model.ReceivingWarehouse</td>
                     </tr>
                     <tr>
-                        <td style="width: 15%;">Fiscal Year</td>
-                        <td style="width: 15%;" align="center">Document Date</td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;" align="center">Document No.</td>
-                        <td style="width: 15%;"></td>
-                        <td style="width: 15%;" align="right">Based On Document</td>
-                        <td style="width: 10%;"></td>
-                        <td style="width: 10%;"></td>
+                        <td style="width: 15%;border: none;">Fiscal Year</td>
+                        <td style="width: 15%;border: none;">@rep.FiscalYear</td>
+                        <td style="width: 15%;border: none;" align="center">Document Date</td>
+                        <td style="width: 15%;border: none;">@rep.DocumentDate.ToString("yyyy-MM-dd")</td>
+                        <td style="width: 15%;border: none;" align="center">Document No.</td>
+                        <td style="width: 15%;border: none;">@rep.DocumentNumber</td>
+                        <td style="width: 15%;border: none;" align="right">Based On Document</td>
+                        <td style="width: 15%;border: none;">@rep.BasedOnDocument</td>
                     </tr>
                 </table>
             </td>
@@ -220,106 +222,37 @@ else
             <th style="width: 7%;" colspan="2">Total Price</th>
             <th style="width: 3%;" rowspan="2">Quantity</th>
             <th style="width: 3%;" rowspan="2">Unit Of Measure</th>
-            <th style="width: 10%;" rowspan="2">Item Description</th>
+            <th style="width: 10%;" rowspan="2">Item Name-Description</th>
             <th style="width: 5%;" rowspan="2">Item No</th>
             <th style="width: 5%;" rowspan="2">Count</th>
         </tr>
         <tr>
-            <td style="width: 3.5%; text-align: center;">Price</td>
-            <td style="width: 3.5%; text-align: center;">Rupees</td>
-            <td style="width: 3.5%; text-align: center;">Price</td>
-            <td style="width: 3.5%; text-align: center;">Rupees</td>
+            <td style="width: 3.5%; text-align: center;">SAR</td>
+            <td style="width: 3.5%; text-align: center;"></td>
+            <td style="width: 3.5%; text-align: center;">SAR</td>
+            <td style="width: 3.5%; text-align: center;"></td>
         </tr>
-        <tr>
-            <td>&nbsp;454545</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td colspan="7">&nbsp;</td>
-        </tr>
+        @foreach(var item in Model.ReceivingItems){
+            var Item = Model.Items.FirstOrDefault(i => i.ItemId == item.ItemId);      
+            var UnitMeasure = Model.Units.FirstOrDefault(u => u.Id == Item.UnitId).UnitCode ?? "";;
+            <tr>
+                <td>@item.Comments</td>
+                <td>@item.UnitPrice</td>
+                <td></td>
+                <td>@(item.Quantity * item.UnitPrice)</td>
+                <td>&nbsp;</td>
+                <td>@item.Quantity</td>
+                <td>@UnitMeasure</td>
+                <td>@Item.ItemName- @Item.ItemDescription</td>
+                <td>@Item.ItemCode</td>
+                <td>&nbsp;</td>
+            </tr>
+        }
+
+       
+       
+      
+       
         <tr>
             <td colspan="2" style=" text-align: center;"><b>Chief Responsible</b></td>
             <td colspan="4" style="text-align: center;"><b>Technical Member</b></td>
